--- a/index.html
+++ b/index.html
@@ -26,12 +26,20 @@
            
             <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
-
+            
             <div class="button-container">
-                <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
-                    <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
-                    Sortear amigo
-                </button>
+                <div class="button-container">
+                    <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
+                        <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
+                        Sortear amigo
+                    </button>
+                </div>
+                <div class="button-container">
+                    <button class="button-draw" onclick="reset()" aria-label="Reiniciar juego">
+                        <img class="reset_button" src="assets/reset_button.png" alt="Ícono para reiniciar">
+                        Reiniciar
+                    </button>
+                </div>
             </div>
         </section>
     </main>
